
    HADOOP-12849. TestSymlinkLocalFSFileSystem fails intermittently.
    (Mingliang Liu via cnauroth)

>>>>>>> c692d7c... HADOOP-12849. TestSymlinkLocalFSFileSystem fails intermittently. Contributed by Mingliang Liu.
Release 2.7.3 - UNRELEASED
=======
    HADOOP-11218. Add TLSv1.1,TLSv1.2 to KMS, HttpFS, SSLFactory.
    (Vijay Singh via wheat9)

Release 2.7.3 - UNRELEASED
>>>>>>> 64add87... HADOOP-11218. Add TLSv1.1,TLSv1.2 to KMS, HttpFS, SSLFactory. Contributed by Vijay Singh.

    HADOOP-12846. Credential Provider Recursive Dependencies.
    (Larry McCay via cnauroth)

    HADOOP-12903. IPC Server should allow suppressing exception logging by type,
    not log 'server too busy' messages. (Arpit Agarwal)

    HADOOP-12589. Fix intermittent test failure of TestCopyPreserveFlag
    (iwasakims)

    HADOOP-12851. S3AFileSystem Uptake of
    ProviderUtils.excludeIncompatibleCredentialProviders.
    (Larry McCay via cnauroth)

    HADOOP-12682. Fix TestKMS#testKMSRestart* failure.
    (Wei-Chiu Chuang via xyao)

    HADOOP-12119. hadoop fs -expunge does not work for federated namespace
    (J.Andreina via vinayakumarb)

    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
    thrown (Chang Li via jlowe)

    HADOOP-12545. Hadoop javadoc has broken links for AccessControlList,
    ImpersonationProvider, DefaultImpersonationProvider, and DistCp.
    (Arshad Mohammad via aajisaka)

    HADOOP-12588. Fix intermittent test failure of TestGangliaMetrics.
    (Masatake Iwasaki via aajisaka)

    HADOOP-12258. Need translate java.nio.file.NoSuchFileException to
    FileNotFoundException to avoid regression. (Zhihai Xu via cnauroth)

    HADOOP-12689. S3 filesystem operations stopped working correctly
    (Matt Paduano via raviprak)

    HADOOP-12636. Prevent ServiceLoader failure init for unused FileSystems.
    (Inigo Goiri via cdouglas)

Release 2.7.2 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES
