@@ -456,7 +456,7 @@
 </property>
 
 <property>
-  <name>hadoop.work.around.non.threadsafe.getpwuid</name>
+  <name>hadoop.workaround.non.threadsafe.getpwuid</name>
   <value>false</value>
   <description>Some operating systems or authentication modules are known to
   have broken implementations of getpwuid_r and getpwgid_r, such that these
